앱 이름을 Weather로 변경, 크롤링된 데이터는 DB에 저장

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,16 +2,16 @@
 {% block title %} Hello {% endblock %}
 {% block body %}
 <nav class="fast-nav navbar navbar-expand-lg navbar-light bg-white">
-  <a class="navbar-brand text-danger col-sm-3" href="/"><b>Hello</b></a>
+  <a class="navbar-brand text-danger col-sm-3" href="/"><b>Web Crawler</b></a>
   <div class="collapse navbar-collapse col-sm-9" id="navbarText" style="display: inline-block !important; text-align: right;">
     <span class='navbar-text row'>
 
       <span class="col-sm">
-        <a href='/finder'
+        <a href='/weather'
            alt=""
            width="30"
            height="30"
-           style='border-radius: 50%;'>Finder</a>
+           style='border-radius: 50%;'>날씨</a>
       </span>
     </span>
   </div>
